<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/routeNameStartingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
...
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/route_name" />

            <EditText
                android:id="@+id/routeNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawableEnd="@drawable/icons8_checkmark_border_24"
                android:inputType="textPersonName" />
...
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/starting_point" />

            <EditText
                android:id="@+id/startingPEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

...
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"

        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_below="@+id/linearLayoutAdditionalInfo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
            android:background="@drawable/routes_list_start_button_states"
            android:drawableStart="@drawable/icons8_edit_30"
            android:text="@string/note"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/save" />
...
