<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="Home"
            />
        <item android:id="@+id/nav_team"
            android:title="Team"
            />
        <item android:id="@+id/nav_personal_routes"
            android:title="My Routes"
            />
        <item android:id="@+id/nav_team_routes"
            android:title="Team Routes"
            />
        <item android:id="@+id/nav_proposed_walk"
            android:title="Proposed Walk"
            />
        <item android:id="@+id/nav_scheduled_walks"
            android:title="Scheduled Walks"
            />
    </group>
</menu>